<resources>
    <string name="app_name">My Day Planner</string>
    <string name="new_task">New Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    <string name="new_task">New Task</string>-->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="task_name">Task Name:</string>
    <string name="description2">Description:</string>
</resources>