<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskName"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/task_name"
            android:layout_margin="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descName"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/description2"
            android:layout_margin="20dp"
            android:layout_gravity="center"/>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/newTaskButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        app:icon="@drawable/ic_baseline_add_24"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:text="@string/new_task" />



  </RelativeLayout>